--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.ftrani.listacontactos.MainActivity">
 
-    <ListView
-        android:id="@+id/lista_contactos"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sflLista"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/lista_contactos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </RelativeLayout>
